implement basic markdown to html functionality

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "handlebars": "^4.1.1",
+    "markdown-it": "^8.4.2",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
